crates/weaveffi-cli/tests/snapshots/node_shapes__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# shapes

Native bindings for shapes

Node.js bindings for the `shapes` native library: an ES module over a small N-API addon (`shapes_node.c`) that `npm install` compiles with node-gyp. The addon links `shapes`; set `SHAPES_LIBRARY` to the library file (or its directory) when installing, or pass `--shapes-library=<path>` to npm.

```sh
SHAPES_LIBRARY=/path/to/libshapes.so npm install shapes
```

Each top-level module of the API is a namespace export:

```js
import { shapes } from 'shapes';
```

<!-- END README.md -->
