crates/weaveffi-cli/tests/snapshots/node_shapes__index_d_ts.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION]
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate

/// <reference lib="esnext.disposable" />

/**
 * The root of every error these bindings throw. `code` is the ABI error
 * code: positive for a declared domain error, negative for a runtime trap
 * (-1 generic, -2 producer panic, -3 marshalling failure, -4 a callback
 * implementation failed, -5 cancelled).
 */
export declare class ShapesError extends Error {
  readonly code: number;
  constructor(code: number, message?: string);
}
/** The error a cancelled async call rejects with (code -5). */
export declare class CancelledError extends ShapesError {
  constructor(message?: string);
}
/** The root error class, under a name no namespace member can shadow. */
declare const $Error: typeof ShapesError;
/**
 * The native library's live-resource counters (0 objects, 1 callbacks,
 * 2 iterators, 3 cancel tokens, 4 byte runs), for leak tests. Kind -1 is
 * `1n` when the library counts at all.
 * @internal
 */
export declare function __debugLive(kind: number): bigint;

/** Rich (algebraic) enums and the expanded numeric primitives. */
export declare namespace shapes {
  /** An algebraic shape (sum type with associated data) */
  export type Shape =
    /** The empty shape (a unit variant) */
    | { tag: 'Empty' }
    /** A circle with a radius */
    | { tag: 'Circle'; radius: number }
    /** An axis-aligned rectangle */
    | { tag: 'Rectangle'; width: number; height: number }
    /** An integer-bounded shape (exercises narrow + wide ints) */
    | { tag: 'Bounded'; min: number; max: number; weight: bigint }
    /** A labeled shape with a small count */
    | { tag: 'Labeled'; label: string; count: number };
  /** A plain C-style enum (no payloads) */
  export enum Channel {
    Red = 0,
    Green = 1,
    Blue = 2,
  }
  /** One field per supported numeric primitive */
  export interface Numerics {
    a: number;
    b: number;
    c: number;
    d: bigint;
    e: number;
    f: number;
    g: number;
    h: bigint;
    i: number;
    j: number;
  }
  /** Render a shape to a string */
  export function describe(shape: shapes.Shape): string;
  /** Scale a shape by a factor, returning a new shape */
  export function scale(shape: shapes.Shape, factor: number): shapes.Shape;
  /** Sum a list of bytes into a wide integer (numerics smoke) */
  export function sumBytes(values: Uint8Array): bigint;
  /** Build a Numerics struct from every numeric primitive */
  export function makeNumerics(a: number, b: number, c: number, d: bigint, e: number, f: number, g: number, h: bigint, i: number, j: number): shapes.Numerics;
}

// END index.d.ts
