crates/weaveffi-cli/tests/snapshots/node_shapes__index_js.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION]
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate

import {
  $Fault,
  $fault,
  $domain,
  $raise,
  $W,
  $WK,
  $R,
  $encode,
  $decode,
  $Object,
  $own,
  $adopt,
  $adoptOpt,
  $lend,
  $lendOpt,
  $unlend,
  $clone,
  $cloneOpt,
  $Iterator,
  $cancellable,
  $impl,
  $ret,
  $verify,
  ShapesError as $Error,
} from './runtime.js';
export { ShapesError, CancelledError } from './runtime.js';

import { createRequire } from 'node:module';

// The native entry points: the N-API addon built from shapes_node.c. A prebuilt
// copy comes first (from the `shapes-<os>-<cpu>` package `npm install`
// picks for this platform, or under prebuilds/<os>-<cpu>/), then the one
// node-gyp compiles at install time when none matches.
function $loadAddon(name) {
  const require = createRequire(import.meta.url);
  const platform = `${process.platform}-${process.arch}`;
  const candidates = [
    `shapes-${platform}/${name}`,
    `./prebuilds/${platform}/${name}`,
    `./build/Release/${name}`,
    `./build/Debug/${name}`,
  ];
  for (const candidate of candidates) {
    try {
      return require(candidate);
    } catch (e) {
      if (e.code !== 'MODULE_NOT_FOUND') throw e;
    }
  }
  throw new Error(
    `the native addon ${name} was not found (tried ${candidates.join(', ')}); ` +
      'install the package for this platform, or build the addon with `npm install` ' +
      'or `node-gyp rebuild` in this package',
  );
}

const $raw = $loadAddon('shapes_node.node');
$raw.$setup($Fault);

// Object tokens in value buffers are already bigint handles here.
const $token = (t) => t;

// The declarations these bindings were generated with, per top-level
// module, as [id, hash, path]: the library's contract tables must hold
// each one (see $verify).
const $contract = [
  ['shapes', [
    [0x0d7b3eec49243e7an, 0x5f232311808e1b1fn, 'shapes.Channel'],
    [0x183fa8198100860en, 0xe40c6993cb31d359n, 'shapes.describe'],
    [0x2d1395eb837b848en, 0x42202a0c12f3a16en, 'shapes.sum_bytes'],
    [0x7f9a5b87ba09b86bn, 0xc5b32fb0efbbaa17n, 'shapes.scale'],
    [0xc8edd779240fda17n, 0x68e1be78fddb20e4n, 'shapes.Numerics'],
    [0xd3d3881b2fd18a62n, 0xf24d0eb76a99d918n, 'shapes.make_numerics'],
    [0xf010844afff5ac3cn, 0x50de28ae9b41ff15n, 'shapes.Shape'],
  ]],
];
$verify($raw, 'shapes', 'shapes', 4, $contract);

/**
 * The native library's live-resource counters (0 objects, 1 callbacks,
 * 2 iterators, 3 cancel tokens, 4 byte runs), for leak tests. Kind -1 is
 * `1n` when the library counts at all (its `leak-check` feature), else
 * every kind is `0n`.
 */
export function __debugLive(kind) {
  return $raw.shapes_debug_live(kind);
}

const shapes$Channel = Object.freeze({
  Red: 0,
  Green: 1,
  Blue: 2,
  0: 'Red',
  1: 'Green',
  2: 'Blue',
});

function $w$shapes$Numerics(w, v) {
  w.writeI8(v.a);
  w.writeI16(v.b);
  w.writeI32(v.c);
  w.writeI64(v.d);
  w.writeU8(v.e);
  w.writeU16(v.f);
  w.writeU32(v.g);
  w.writeU64(v.h);
  w.writeF32(v.i);
  w.writeF64(v.j);
}
function $r$shapes$Numerics(r) {
  return {
    a: r.readI8(),
    b: r.readI16(),
    c: r.readI32(),
    d: r.readI64(),
    e: r.readU8(),
    f: r.readU16(),
    g: r.readU32(),
    h: r.readU64(),
    i: r.readF32(),
    j: r.readF64(),
  };
}
function $w$shapes$Shape(w, v) {
  switch (v.tag) {
    case 'Empty':
      w.writeI32(0);
      return;
    case 'Circle':
      w.writeI32(1);
      w.writeF64(v.radius);
      return;
    case 'Rectangle':
      w.writeI32(2);
      w.writeF32(v.width);
      w.writeF32(v.height);
      return;
    case 'Bounded':
      w.writeI32(3);
      w.writeI16(v.min);
      w.writeI16(v.max);
      w.writeU64(v.weight);
      return;
    case 'Labeled':
      w.writeI32(4);
      w.writeString(v.label);
      w.writeU8(v.count);
      return;
    default:
      throw new TypeError('unknown Shape tag: ' + (v && v.tag));
  }
}
function $r$shapes$Shape(r) {
  const tag = r.readI32();
  switch (tag) {
    case 0: return { tag: 'Empty' };
    case 1: return { tag: 'Circle', radius: r.readF64() };
    case 2: return { tag: 'Rectangle', width: r.readF32(), height: r.readF32() };
    case 3: return { tag: 'Bounded', min: r.readI16(), max: r.readI16(), weight: r.readU64() };
    case 4: return { tag: 'Labeled', label: r.readString(), count: r.readU8() };
    default:
      throw new $Error(-3, 'unknown Shape tag: ' + tag);
  }
}

const shapes$describe = function describe(shape) {
  try {
    return $raw.shapes_shapes_describe($encode(shape, $w$shapes$Shape));
  } catch ($e) {
    throw $fault($e);
  }
};

const shapes$scale = function scale(shape, factor) {
  try {
    return $decode($raw.shapes_shapes_scale($encode(shape, $w$shapes$Shape), factor), $r$shapes$Shape);
  } catch ($e) {
    throw $fault($e);
  }
};

const shapes$sumBytes = function sumBytes(values) {
  try {
    return $raw.shapes_shapes_sum_bytes(values);
  } catch ($e) {
    throw $fault($e);
  }
};

const shapes$makeNumerics = function makeNumerics(a, b, c, d, e, f, g, h, i, j) {
  try {
    return $decode($raw.shapes_shapes_make_numerics(a, b, c, d, e, f, g, h, i, j), $r$shapes$Numerics);
  } catch ($e) {
    throw $fault($e);
  }
};

export const shapes = Object.freeze({
  Channel: shapes$Channel,
  describe: shapes$describe,
  scale: shapes$scale,
  sumBytes: shapes$sumBytes,
  makeNumerics: shapes$makeNumerics,
});

// END index.js
