crates/weaveffi-cli/tests/snapshots/node_shapes__package_json.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
{
  "//": "Generated by WeaveFFI [VERSION] from api.yml",
  "//warning": "DO NOT EDIT. Your changes will be overwritten.",
  "//regenerate": "To regenerate: weaveffi generate api.yml -o <out>",
  "name": "shapes",
  "version": "0.1.0",
  "description": "Native bindings for shapes",
  "type": "module",
  "main": "index.js",
  "types": "index.d.ts",
  "exports": {
    ".": {
      "types": "./index.d.ts",
      "default": "./index.js"
    }
  },
  "files": [
    "index.js",
    "index.d.ts",
    "runtime.js",
    "binding.gyp",
    "shapes_node.c",
    "shapes.h"
  ],
  "gypfile": true,
  "scripts": {
    "install": "node-gyp rebuild"
  },
  "engines": {
    "node": ">=18"
  }
}
