crates/weaveffi-cli/tests/snapshots/node_shapes__shapes_h.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

#ifndef SHAPES_H
#define SHAPES_H

#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

#ifndef SHAPES_API
#  if defined(_WIN32) || defined(__CYGWIN__)
#    ifdef SHAPES_BUILD
#      define SHAPES_API __declspec(dllexport)
#    else
#      define SHAPES_API __declspec(dllimport)
#    endif
#  elif defined(__EMSCRIPTEN__)
#    define SHAPES_API __attribute__((used, visibility("default")))
#  elif defined(__GNUC__) && (__GNUC__ >= 4)
#    define SHAPES_API __attribute__((visibility("default")))
#  else
#    define SHAPES_API
#  endif
#endif

#ifndef SHAPES_DEPRECATED
#  if defined(_MSC_VER)
#    define SHAPES_DEPRECATED(msg) __declspec(deprecated(msg))
#  elif defined(__GNUC__) || defined(__clang__)
#    define SHAPES_DEPRECATED(msg) __attribute__((deprecated(msg)))
#  else
#    define SHAPES_DEPRECATED(msg)
#  endif
#endif

#ifdef __cplusplus
extern "C" {
#endif

/* The C ABI revision this header was generated against. The producer
   exports shapes_abi_version() so a consumer can refuse to load a
   library built for a different revision. */
#define SHAPES_ABI_VERSION 3u
SHAPES_API uint32_t shapes_abi_version(void);

/* Error slot written by every fallible call. `message` is NUL-terminated
   UTF-8. `payload_ptr`/`payload_len` hold the matched error code's fields
   serialized in the value buffer format (null when the code declares no
   fields). Both are released by shapes_error_clear. Positive codes are
   the API's declared error codes; negative codes are runtime traps:
   -1 generic, -2 producer panic, -3 marshalling failure, -4 a callback
   interface implementation failed, -5 cancelled. */
typedef struct shapes_error {
    int32_t code;
    const char* message;
    const uint8_t* payload_ptr;
    size_t payload_len;
} shapes_error;

/* Fill `err` with `code` and a producer-owned copy of `message`. Callback
   interface implementations call this to report a failure (code -4)
   without allocating with a foreign allocator. */
SHAPES_API void shapes_error_set(shapes_error* err, int32_t code, const char* message);
SHAPES_API void shapes_error_clear(shapes_error* err);

/* Async completions receive a heap-boxed error the consumer owns;
   shapes_error_free releases the message, the payload, and the box.
   NULL is a no-op. */
SHAPES_API void shapes_error_free(shapes_error* err);

/* Release a string, bytes, or value buffer the producer returned. */
SHAPES_API void shapes_free_bytes(uint8_t* ptr, size_t len);

/* Cancellation for `cancellable` async functions. A token starts with
   one reference owned by the consumer; the producer takes its own for
   each call it is passed to, so the consumer may cancel and destroy its
   reference at any time. A cancelled call completes with code -5. */
typedef struct shapes_cancel_token shapes_cancel_token;
SHAPES_API shapes_cancel_token* shapes_cancel_token_create(void);
SHAPES_API void shapes_cancel_token_cancel(shapes_cancel_token* token);
SHAPES_API bool shapes_cancel_token_is_cancelled(const shapes_cancel_token* token);
SHAPES_API void shapes_cancel_token_destroy(shapes_cancel_token* token);

/* Linear-memory allocator the Wasm glue stages arguments through.
   Exported by wasm32 producers only. */
SHAPES_API uint8_t* shapes_alloc(uint32_t size);
SHAPES_API void shapes_dealloc(uint8_t* ptr, uint32_t size);

/* Live-allocation counters for leak checks in tests: 0 objects,
   1 callbacks, 2 iterators, 3 cancel tokens, 4 returned allocations.
   Always 0 unless the producer enables the `leak-check` feature. */
SHAPES_API uint64_t shapes_debug_live(int32_t kind);

/* Contract checksums, one per top-level module. A consumer compares
   each function's result with the constant it was generated against
   before making any other call. */
#define SHAPES_SHAPES_CHECKSUM 0x06acf433ffa2a0f0ull
SHAPES_API uint64_t shapes_shapes_checksum(void);

/*
 * Strings, bytes, and value buffers cross as (ptr, len) pairs. A
 * parameter named "v" expands to a view borrowed for the call:
 *   const uint8_t* v_ptr, size_t v_len
 * Strings are UTF-8 without a NUL terminator; NULL with length 0 is
 * the empty value. A returned string, bytes, or buffer is
 * `const uint8_t*` with a trailing `size_t* out_len`, owned by the
 * caller and released with shapes_free_bytes.
 * Records, rich enums, lists, maps, and optionals are serialized
 * in the little-endian value buffer format; when generated,
 * shapes_buffer.h declares a C struct and codec for each.
 */

/** An algebraic shape (sum type with associated data) */
typedef enum {
    /** The empty shape (a unit variant) */
    shapes_shapes_Shape_Empty = 0,
    /** A circle with a radius */
    shapes_shapes_Shape_Circle = 1,
    /** An axis-aligned rectangle */
    shapes_shapes_Shape_Rectangle = 2,
    /** An integer-bounded shape (exercises narrow + wide ints) */
    shapes_shapes_Shape_Bounded = 3,
    /** A labeled shape with a small count */
    shapes_shapes_Shape_Labeled = 4
} shapes_shapes_Shape_Tag;
/** A plain C-style enum (no payloads) */
typedef enum { shapes_shapes_Channel_Red = 0, shapes_shapes_Channel_Green = 1, shapes_shapes_Channel_Blue = 2 } shapes_shapes_Channel;

// Module: shapes
/** Render a shape to a string */
SHAPES_API const uint8_t* shapes_shapes_describe(const uint8_t* shape_ptr, size_t shape_len, size_t* out_len, shapes_error* out_err);
/** Scale a shape by a factor, returning a new shape */
SHAPES_API const uint8_t* shapes_shapes_scale(const uint8_t* shape_ptr, size_t shape_len, double factor, size_t* out_len, shapes_error* out_err);
/** Sum a list of bytes into a wide integer (numerics smoke) */
SHAPES_API uint64_t shapes_shapes_sum_bytes(const uint8_t* values_ptr, size_t values_len, shapes_error* out_err);
/** Build a Numerics struct from every numeric primitive */
SHAPES_API const uint8_t* shapes_shapes_make_numerics(int8_t a, int16_t b, int32_t c, int64_t d, uint8_t e, uint16_t f, uint32_t g, uint64_t h, float i, double j, size_t* out_len, shapes_error* out_err);


#ifdef __cplusplus
}
#endif

#endif // SHAPES_H

// END shapes.h
