crates/weaveffi-cli/tests/snapshots/node_shapes__types_d_ts.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

// Generated types for WeaveFFI functions
/**
 * Base class of every error thrown by these bindings. Non-throwing
 * functions reject or throw it directly for runtime traps (code -2 a
 * producer panic, -3 a marshalling failure, -4 a callback interface
 * implementation that threw); throwing functions surface a module
 * domain subclass for their declared codes.
 */
export class WeaveFFIError extends Error {
  /** The numeric ABI error code. */
  code: number;
  /** The raw producer message, without the code prefix. */
  errorMessage: string;
  constructor(code: number, message: string);
}
/** One field per supported numeric primitive */
export interface Numerics {
  a: number;
  b: number;
  c: number;
  d: bigint;
  e: number;
  f: number;
  g: number;
  h: bigint;
  i: number;
  j: number;
}
/** An algebraic shape (sum type with associated data) */
export type Shape =
  /** The empty shape (a unit variant) */
  | { tag: 'Empty' }
  /** A circle with a radius */
  | { tag: 'Circle'; radius: number }
  /** An axis-aligned rectangle */
  | { tag: 'Rectangle'; width: number; height: number }
  /** An integer-bounded shape (exercises narrow + wide ints) */
  | { tag: 'Bounded'; min: number; max: number; weight: bigint }
  /** A labeled shape with a small count */
  | { tag: 'Labeled'; label: string; count: number };
/** A plain C-style enum (no payloads) */
export enum Channel {
  Red = 0,
  Green = 1,
  Blue = 2,
}
// module shapes
/**
 * Render a shape to a string
 * Maps to C function: weaveffi_shapes_describe
 */
export function describe(shape: Shape): string
/**
 * Scale a shape by a factor, returning a new shape
 * Maps to C function: weaveffi_shapes_scale
 */
export function scale(shape: Shape, factor: number): Shape
/**
 * Sum a list of bytes into a wide integer (numerics smoke)
 * Maps to C function: weaveffi_shapes_sum_bytes
 */
export function sumBytes(values: Buffer): bigint
/**
 * Build a Numerics struct from every numeric primitive
 * Maps to C function: weaveffi_shapes_make_numerics
 */
export function makeNumerics(a: number, b: number, c: number, d: bigint, e: number, f: number, g: number, h: bigint, i: number, j: number): Numerics

// END types.d.ts
